force-app/main/default/objects/Registration_Account__c/fields/Subcontractors_Franchises__c.field-meta.xml
<CustomField>
    <fullName>Subcontractors_Franchises__c</fullName>
    <label>Subcontractors Franchises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>