force-app/main/default/objects/Registration_Account__c/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <formula>TEXT(Registration__r.Submission_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Type</label>
    <type>Text</type>
</CustomField>