force-app/main/default/objects/Registration_Account__c/fields/TreasurerName__c.field-meta.xml
<CustomField>
    <fullName>TreasurerName__c</fullName>
    <label>Treasurer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>