force-app/main/default/objects/Registration_Account__c/fields/Type_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Company__c</fullName>
    <inlineHelpText>Please indicate which type of company this is that is involved in the joint venture.</inlineHelpText>
    <label>Type of Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>LLP LP</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>