force-app/main/default/objects/Registration_Account__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <formula>IF(
RecordType.Name=&quot;Sole Proprietorship&quot;,
LEFT(First_Name__c,3)+LEFT(Last_Name__c,3)+MID(Residential_Phone__c,2,3)+MID(Residential_Phone__c,7,3)+MID(Residential_Phone__c,11,4),
IF(
(RecordType.Name=&quot;Corp or LLC&quot; ||
RecordType.Name=&quot;Joint Venture&quot; ||
RecordType.Name=&quot;Limited Partnership&quot; ||
RecordType.Name=&quot;Partnership&quot; ||
RecordType.Name=&quot;Parent Company&quot;),
LEFT(First_Name__c,3)+LEFT(Last_Name__c,3)+LEFT(Federal_Employer_Identification_Number__c,9),null))</formula>
    <label>Unique ID</label>
    <type>Text</type>
</CustomField>