force-app/main/default/objects/Registration_Account__c/fields/VicePresidentName__c.field-meta.xml
<CustomField>
    <fullName>VicePresidentName__c</fullName>
    <label>Vice President Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>