force-app/main/default/objects/Registration_Account__c/fields/VIPAgent__c.field-meta.xml
<CustomField>
    <fullName>VIPAgent__c</fullName>
    <formula>IF(RecordType.Name = &quot;Agent&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Agent</label>
    <type>Checkbox</type>
</CustomField>