force-app/main/default/objects/Registration_Account__c/fields/VIPAgent_for_Service__c.field-meta.xml
<CustomField>
    <fullName>VIPAgent_for_Service__c</fullName>
    <description>Used in the VIP form for record types.</description>
    <formula>IF(RecordType.DeveloperName = &quot;Agent&quot;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPAgent for Service</label>
    <type>Checkbox</type>
</CustomField>