force-app/main/default/objects/Registration_Account__c/fields/VIPCorporLLC__c.field-meta.xml
<CustomField>
    <fullName>VIPCorporLLC__c</fullName>
    <formula>IF(RecordType.Name = &quot;Corp or LLC&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Corp or LLC</label>
    <type>Checkbox</type>
</CustomField>