force-app/main/default/objects/Registration_Account__c/fields/VIPGPorJVCorp__c.field-meta.xml
<CustomField>
    <fullName>VIPGPorJVCorp__c</fullName>
    <description>Used in the PW Registration Form</description>
    <formula>IF(ISPICKVAL(Joint_Venture_Company_Type__c, &quot;Corporation&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP GP or JV Corp</label>
    <type>Checkbox</type>
</CustomField>