force-app/main/default/objects/Registration_Account__c/fields/VIPGPorJVPartnership__c.field-meta.xml
<CustomField>
    <fullName>VIPGPorJVPartnership__c</fullName>
    <description>Used in the PW Registration Form</description>
    <formula>IF(ISPICKVAL(Joint_Venture_Company_Type__c, &quot;Partnership&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP GP or JV Partnership</label>
    <type>Checkbox</type>
</CustomField>