force-app/main/default/objects/Registration_Account__c/fields/VIPJointVenture__c.field-meta.xml
<CustomField>
    <fullName>VIPJointVenture__c</fullName>
    <formula>IF(RecordType.Name = &quot;Joint Venture&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Joint Venture</label>
    <type>Checkbox</type>
</CustomField>