force-app/main/default/objects/Registration_Account__c/fields/VIPLimitedPartnership__c.field-meta.xml
<CustomField>
    <fullName>VIPLimitedPartnership__c</fullName>
    <formula>IF(RecordType.Name = &quot;Limited Partnership&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Limited Partnership</label>
    <type>Checkbox</type>
</CustomField>