force-app/main/default/objects/Registration_Account__c/fields/VIPParentCompany__c.field-meta.xml
<CustomField>
    <fullName>VIPParentCompany__c</fullName>
    <formula>IF(RecordType.Name = &quot;Parent Company&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Parent Company</label>
    <type>Checkbox</type>
</CustomField>