force-app/main/default/objects/Registration_Account__c/fields/VIPParentGuardian__c.field-meta.xml
<CustomField>
    <fullName>VIPParentGuardian__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;Parent_Guardian&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Parent Guardian</label>
    <type>Checkbox</type>
</CustomField>