force-app/main/default/objects/Registration_Account__c/fields/VIPPermitApplicant__c.field-meta.xml
<CustomField>
    <fullName>VIPPermitApplicant__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;Individual_Permit&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Permit Applicant</label>
    <type>Checkbox</type>
</CustomField>