force-app/main/default/objects/Registration_Account__c/fields/VIPSubcontractorsFranchises__c.field-meta.xml
<CustomField>
    <fullName>VIPSubcontractorsFranchises__c</fullName>
    <formula>IF(RecordType.Name = &quot;Subcontractors Franchises&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPSubcontractorsFranchises</label>
    <type>Checkbox</type>
</CustomField>