force-app/main/default/objects/Registration_Account__c/recordTypes/Joint_Venture.recordType-meta.xml
<RecordType>
    <fullName>Joint_Venture</fullName>
    <active>true</active>
    <label>Joint Venture</label>
</RecordType>