force-app/main/default/objects/Registration_Account__c/recordTypes/Management_Individual.recordType-meta.xml
<RecordType>
    <fullName>Management_Individual</fullName>
    <active>true</active>
    <label>Management Individual</label>
</RecordType>