force-app/main/default/objects/Registration_Account__c/recordTypes/Partnership.recordType-meta.xml
<RecordType>
    <fullName>Partnership</fullName>
    <active>true</active>
    <label>Partnership</label>
</RecordType>