force-app/main/default/objects/Registration_Account__c/validationRules/Address_cannot_have_PO_Box.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_cannot_have_PO_Box</fullName>
    <active>true</active>
    <description>Does not allow P.O Boxes to be added in address fields.</description>
    <errorConditionFormula>OR( 
CONTAINS( Physical_Business_Street__c, &quot;PO BOX&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;PO BOX&quot;), 
CONTAINS( Residential_Street__c, &quot;PO BOX&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;PO BOX&quot;), 
CONTAINS( Physical_Business_Street__c, &quot;P.O Box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;P.O Box&quot;), 
CONTAINS(  Residential_Street__c , &quot;P.O Box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;P.O Box&quot;), 
CONTAINS( Physical_Business_Street__c, &quot;P.O. Box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;P.O. Box&quot;), 
CONTAINS( Residential_Street__c, &quot;P.O. Box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;P.O. Box&quot;), 
CONTAINS( Physical_Business_Street__c , &quot;po box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;po box&quot;), 
CONTAINS( Residential_Street__c, &quot;po box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;po box&quot;), 
CONTAINS( Physical_Business_Street__c , &quot;P.O. box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;P.O. box&quot;), 
CONTAINS( Residential_Street__c, &quot;P.O. box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;P.O. box&quot;), 
CONTAINS( Physical_Business_Street__c , &quot;p.o. box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;p.o. box&quot;), 
CONTAINS( Residential_Street__c, &quot;p.o. box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;p.o. box&quot;), 
CONTAINS( Physical_Business_Street__c , &quot;PO Box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;PO Box&quot;), 
CONTAINS( Residential_Street__c, &quot;PO Box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;PO Box&quot;),
CONTAINS( Physical_Business_Street__c, &quot;P. O. Box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;P. O. Box&quot;), 
CONTAINS( Residential_Street__c, &quot;P. O. Box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;P. O. Box&quot;),
CONTAINS( Physical_Business_Street__c , &quot;p o box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;p o box&quot;), 
CONTAINS( Residential_Street__c, &quot;p o box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;p o box&quot;),   
CONTAINS( Physical_Business_Street__c , &quot;p. o. box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;p. o. box&quot;), 
CONTAINS( Residential_Street__c, &quot;p. o. box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;p. o. box&quot;),
CONTAINS( Physical_Business_Street__c, &quot;P.O. BOX&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;P.O. BOX&quot;), 
CONTAINS( Residential_Street__c, &quot;P.O. BOX&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;P.O. BOX&quot;),
CONTAINS( Physical_Business_Street__c, &quot;P. O. BOX&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;P. O. BOX&quot;), 
CONTAINS( Residential_Street__c, &quot;P. O. BOX&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;P. O. BOX&quot;),
CONTAINS( Physical_Business_Street__c, &quot;P.O.Box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;P.O.Box&quot;), 
CONTAINS( Residential_Street__c, &quot;P.O.Box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;P.O.Box&quot;),
CONTAINS( Physical_Business_Street__c, &quot;P. O . Box&quot;), 
CONTAINS( Physical_Business_Line_2__c, &quot;P. O . Box&quot;), 
CONTAINS( Residential_Street__c, &quot;P. O . Box&quot;), 
CONTAINS( Residential_Address_Line_2__c, &quot;P. O . Box&quot;)
)</errorConditionFormula>
    <errorMessage>P.O. Boxes are not accepted addresses. Please change to a physical location before moving forward.</errorMessage>
</ValidationRule>