force-app/main/default/objects/Registration_Account__c/validationRules/FEIN_must_be_9_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>FEIN_must_be_9_numbers</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
AND( 
LEN(  Federal_Employer_Identification_Number__c ) &lt;&gt; 9, 
NOT(ISBLANK( Federal_Employer_Identification_Number__c )), 
RecordType.Name &lt;&gt; &quot;Management Individual&quot; 
), 
AND( 
NOT(ISNUMBER( Federal_Employer_Identification_Number__c )), 
NOT(ISBLANK(Federal_Employer_Identification_Number__c )), 
RecordType.Name &lt;&gt; &quot;Management Individual&quot; 
) 
)</errorConditionFormula>
    <errorMessage>FEIN must be 9 numbers. Please correct to continue.</errorMessage>
</ValidationRule>