force-app/main/default/objects/Registration_Account__c/validationRules/Must_explain_if_not_in_good_standing.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_explain_if_not_in_good_standing</fullName>
    <active>false</active>
    <description>If an applicant selects &quot;No&quot; to answer whether they are in good standing with the secretary of state, then they must also fill out an explanation as to why.</description>
    <errorConditionFormula>AND( 
ISBLANK( Not_in_good_standing_explanation__c ), 
ISPICKVAL( Good_standing_with_CA_Secretary_of_State__c , &quot;No&quot;) 
)</errorConditionFormula>
    <errorMessage>Please explain why this business is not in good standing with the Secretary of State.</errorMessage>
</ValidationRule>