force-app/main/default/objects/Registration_Account__c/validationRules/Only_1_EWP_permit_applicant_is_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_1_EWP_permit_applicant_is_allowed</fullName>
    <active>true</active>
    <description>Only 1 EWP permit applicant is allowed, preventing multiple applicants.</description>
    <errorConditionFormula>AND(ISNEW()
, Registration__r.Number_of_Permit_Individual__c &gt; 0
, RecordType.DeveloperName = &quot;Individual_Permit&quot;
, Registration__r.RecordType.DeveloperName = &#39;Entertainment_Work&#39;
)</errorConditionFormula>
    <errorMessage>You have already entered the permit applicant&#39;s information for an Entertainment Work Permit, please edit the existing record instead of creating a new record.</errorMessage>
</ValidationRule>