force-app/main/default/objects/Registration_Account__c/validationRules/Only_1_permit_applicant_is_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_1_permit_applicant_is_allowed</fullName>
    <active>true</active>
    <description>Only 1 permit applicant is allowed, preventing multiple CPS applicant</description>
    <errorConditionFormula>AND(ISNEW(),  Registration__r.Reg_Account_Counter__c &gt; 0,  RecordType.DeveloperName = &quot;Individual_Permit&quot; )</errorConditionFormula>
    <errorMessage>You have already entered permit applicant&#39;s information, please edit the record instead of creating a new record.</errorMessage>
</ValidationRule>