force-app/main/default/objects/Registration_Account__c/validationRules/Permit_Applicant_must_be_over_16.validationRule-meta.xml
<ValidationRule>
    <fullName>Permit_Applicant_must_be_over_16</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Registration__r.License_Registration_Type__c, &#39;Child Performer Services&#39;) 
,(Birth_Date__c &gt; Date(Year(Today()) - 15, Month(Today()), Day(Today()))) &amp;&amp; 
(RecordType.DeveloperName = &#39;Individual_Permit&#39;) 
, False)</errorConditionFormula>
    <errorMessage>Please validate that you are at least 16 years or older.</errorMessage>
</ValidationRule>