force-app/main/default/objects/Registration_Account__c/validationRules/Phone_must_be_10_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_must_be_10_numbers</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
AND( 
NOT(ISBLANK(Business_Phone__c )), 
NOT(REGEX(Business_Phone__c , &quot;\\D*?(\\d\\D*?){10}&quot;)),
OR( 
ISPICKVAL(  Mailing_Country__c , &quot;United States of America&quot;), 
ISPICKVAL(  Physical_Business_Country__c , &quot;United States of America&quot;))
), 
AND( 
NOT(ISBLANK(Mobile_Phone__c)), 
NOT(REGEX(Mobile_Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;)),
OR( 
ISPICKVAL(  Mailing_Country__c , &quot;United States of America&quot;), 
ISPICKVAL(  Physical_Business_Country__c , &quot;United States of America&quot;)),
Registration__r.RecordType.DeveloperName != &quot;Entertainment_Work&quot;
),
AND( 
NOT(ISBLANK( Residential_Phone__c )), 
NOT(REGEX(Residential_Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;)) ,
ISPICKVAL( Residential_Country__c, &quot;United States of America&quot;),
OR( 
ISPICKVAL(  Mailing_Country__c , &quot;United States of America&quot;), 
ISPICKVAL(  Physical_Business_Country__c , &quot;United States of America&quot;)) 
))</errorConditionFormula>
    <errorMessage>USA phone numbers must be 10 numbers. Please correct to continue.</errorMessage>
</ValidationRule>