force-app/main/default/objects/Registration_Account__c/validationRules/PW_ITIN_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>PW_ITIN_Verification</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &quot;Sole_Proprietorship&quot;,
Registration__r.Record_Type_Name__c = &quot;Public_Works&quot;,
NOT(ISBLANK(ITIN__c)), 
NOT(ISBLANK( RetypeITIN__c )), 
ITIN__c &lt;&gt;  RetypeITIN__c
)</errorConditionFormula>
    <errorMessage>Please ensure that ITIN and Re-typed ITIN match.</errorMessage>
</ValidationRule>