force-app/main/default/objects/Registration_Account__c/validationRules/Require_Additional_Authorization_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Additional_Authorization_Details</fullName>
    <active>false</active>
    <description>For Registration Agents, requires &#39;Additional Authorizations&#39; field if Agree_to_additional_authorization__c = Yes.</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Agree_to_additional_authorization__c, &quot;Yes&quot;), 
ISBLANK( Additional_Authorizations__c ) 
)</errorConditionFormula>
    <errorDisplayField>Additional_Authorizations__c</errorDisplayField>
    <errorMessage>Please provide details as to what additional authorizations should be granted to this agent.</errorMessage>
</ValidationRule>