force-app/main/default/objects/Registration_Account__c/validationRules/Require_formatting_for_US_zip_codes.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_formatting_for_US_zip_codes</fullName>
    <active>true</active>
    <description>Requires that the zip code formatting when in the us conforms to standard zip codes</description>
    <errorConditionFormula>/* Evaluate in these conditions */ 
( 
(/* Exempt new imported records */ 
ISNEW() &amp;&amp; !ISBLANK(TEXT (Imported_From__c)) 
) 

/* Or the field value has changed */ 
|| 
ISCHANGED ( Residential_Zip_Code__c ) 
|| 
ISCHANGED ( Mailing_Zip_Code__c ) 
||
ISCHANGED ( Physical_Business_Zip_Code__c )
) 

&amp;&amp; 
/* Core of validation rule */ 

( 
!ISBLANK ( Residential_Zip_Code__c) 
&amp;&amp; ISPICKVAL ( Residential_Country__c , &#39;United States of America&#39;) 
&amp;&amp; !REGEX(Residential_Zip_Code__c,&quot;\\d{5}(-\\d{4})?&quot;) 
) 
||
( 
!ISBLANK ( Mailing_Zip_Code__c) 
&amp;&amp; ISPICKVAL ( Mailing_Country__c , &#39;United States of America&#39;) 
&amp;&amp; !REGEX( Mailing_Zip_Code__c,&quot;\\d{5}(-\\d{4})?&quot;) 
) 
||
( 
!ISBLANK ( Physical_Business_Zip_Code__c) 
&amp;&amp; ISPICKVAL ( Physical_Business_Country__c , &#39;United States of America&#39;) 
&amp;&amp; !REGEX( Physical_Business_Zip_Code__c ,&quot;\\d{5}(-\\d{4})?&quot;) 
)</errorConditionFormula>
    <errorMessage>U.S. Zip codes must have 5 digits or 9 digits with a dash between the 5th and 6th digit.</errorMessage>
</ValidationRule>