force-app/main/default/objects/Registration_Account__c/validationRules/SEIN_must_be_8_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>SEIN_must_be_8_numbers</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
AND( 
LEN(   State_Employer_Identification_Number_c__c ) &lt;&gt; 8, 
NOT(ISBLANK( State_Employer_Identification_Number_c__c )), 
RecordType.Name &lt;&gt; &quot;Management Individual&quot; 
), 
AND( 
NOT(ISNUMBER( State_Employer_Identification_Number_c__c )), 
NOT(ISBLANK(State_Employer_Identification_Number_c__c )), 
RecordType.Name &lt;&gt; &quot;Management Individual&quot; 
) 
)</errorConditionFormula>
    <errorMessage>SEIN must be 8 numbers. Please correct to continue.</errorMessage>
</ValidationRule>