force-app/main/default/objects/Registration_Account__c/validationRules/SSN_must_be_9_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_must_be_9_characters</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND( 
LEN( SSN__c ) &lt;&gt; 9, 
NOT(ISBLANK(SSN__c)), 
RecordType.Name = &quot;Management Individual&quot;
),
AND( 
NOT(ISNUMBER( SSN__c )), 
NOT(ISBLANK(SSN__c)), 
RecordType.Name = &quot;Management Individual&quot;
)
)</errorConditionFormula>
    <errorMessage>Social Security numbers must have 9 numbers.</errorMessage>
</ValidationRule>