force-app/main/default/objects/Registration_Account__c/validationRules/SSN_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Verification</fullName>
    <active>true</active>
    <description>Ensures that Re-type SSN is the same as the SSN entered.</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(SSN__c)), 
NOT(ISBLANK( Re_type_SSN__c )), 
SSN__c &lt;&gt; Re_type_SSN__c 
)</errorConditionFormula>
    <errorMessage>Please ensure that SSN and Re-typed SSN match.</errorMessage>
</ValidationRule>