force-app/main/default/objects/Registration_Account__c/validationRules/Zip_Code_must_have_at_least_5_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_must_have_at_least_5_numbers</fullName>
    <active>false</active>
    <description>Requires at least a 5-digit zip code</description>
    <errorConditionFormula>OR( 
AND( 
NOT(ISBLANK(Mailing_Zip_Code__c)), 
LEN(Mailing_Zip_Code__c) &lt; 5) 
, 
AND( 
NOT(ISBLANK( Mailing_Zip_Code__c )), 
NOT(ISNUMBER(Mailing_Zip_Code__c))) 
, 
AND( 
NOT(ISBLANK(Residential_Zip_Code__c)), 
LEN(Residential_Zip_Code__c) &lt; 5) 
, 
AND( 
NOT(ISBLANK( Residential_Zip_Code__c )), 
NOT(ISNUMBER(Residential_Zip_Code__c))) 
, 
AND( 
NOT(ISBLANK( Physical_Business_Zip_Code__c )), 
LEN(Physical_Business_Zip_Code__c) &lt; 5) 
, 
AND( 
NOT(ISBLANK( Physical_Business_Zip_Code__c )), 
NOT(ISNUMBER(Physical_Business_Zip_Code__c))) 
)</errorConditionFormula>
    <errorMessage>Zip Code must have at least 5 numbers.</errorMessage>
</ValidationRule>