force-app/main/default/objects/Registration_Account__c/listViews/All_Individual_Permit_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Individual_Permit_Accounts</fullName>
    <columns>Registration__c</columns>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Birth_Date__c</columns>
    <columns>Age__c</columns>
    <columns>Submission_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Registration_Account__c.Individual_Permit</value>
    </filters>
    <label>All Individual Permit Accounts</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>